--- a/estilos2.css
+++ b/estilos2.css
@@ -26,7 +26,7 @@ body {
 header {
     text-align: center;
     padding: 80px 20px;
-    background-image: url('imagenes/header-floral.jpg'); /* << USA TU NUEVO HEADER AQUÍ */
+    background-image: url('https://www.escritoraanacarolina.com/imagenes/header-floral.jpg'); /* << USA TU NUEVO HEADER AQUÍ */
     background-size: cover;
     background-position: center;
     position: relative;
@@ -209,4 +209,5 @@ h3 {
 
 .booksgramer img {
     width: 50px; height: 50px; border-radius: 50%; border: 2px solid var(--rosa-acento);
+
 }
